[package]
name = "cw-contract"
version = "0.0.1"
authors = []
edition = "2018"
description = "Smart Contract"
license = "Apache-2.0"
repository = ""
homepage = ""
documentation = ""

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false

[dependencies]
cw-utils = { version = "1.0.1" }
cw2 = { version = "1.0.1" }
cw20 = { version = "1.0.1" }
cw-storage-plus = { version = "1.0.1" }
cosmwasm-schema = { version = "1.2.4" }
cosmwasm-std = { version = "1.2.4" }
schemars = "0.8.1"
serde = { version = "1.0.160", default-features = false, features = ["derive"] }
cw_repository = { version = "0.0.3", path = "../cw-repository", features = ["library"] }
cw-acl = { version = "0.0.3", path = "../cw-acl", features = ["library"] }
cw-lib = { version = "0.1.0", path = "../cw-lib" }
thiserror = { version = "1.0.40" }

[dev-dependencies]
cw-multi-test = { version = "0.16.4" }
